e2e/dev/istio-demo/deploy/check/busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: busybox
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: busybox
        version: v1
    spec:
      serviceAccount: busybox
      nodeSelector:
        node.es.io/role: worker
      containers:
      - args:
        - sleep
        - 100d
        image: hub.easystack.cn/production/escloud-linux-source-busybox:latest
        imagePullPolicy: IfNotPresent
        name: busybox
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /istio-check
          name: busybox-bin
        - mountPath: /usr/local/bin/kubectl
          name: kubectl
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 365
          name: busybox-bin
        name: busybox-bin
      - name: kubectl
        hostPath:
          path: /usr/local/bin/kubectl
          type: File
