e2e/dev/istio-demo/deploy/check/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: busybox
spec:
  egress:
  - hosts:
    - "*/*"
